--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "file",
     "sharing"
   ],
-  "repository": "https://github.com/CodeXBotz/File-Sharing-Bot",
+  "repository": "https://github.com/nirmanbatch/File-Sharing-Bot",
   "logo": "https://telegra.ph/file/14d3013fda21281c54b61.jpg",
   "env": {
     "TG_BOT_TOKEN": {
@@ -26,7 +26,7 @@
       "value": ""
     },
     "CHANNEL_ID":{
-      "description": "make a channel (database channel), then make the bot as admin in channel, and it's id",
+      "description": "make a channel (database channel), then make the bot as adminn channel, and it's id",
       "value": "-100"
     },
     "FORCE_SUB_CHANNEL":{
